# ai-sfx-pipeline

./: .gitignore  README.md  main.py  pyproject.toml
src/: notebook.ipynb
src/.ipynb_checkpoints/: notebook-checkpoint.ipynb
