[project]
name = "ai-sfx-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.59",
    "elevenlabs[pyaudio]>=2.20.1",
    "notebook>=7.4.7",
    "pip>=25.3",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
]
